[gd_scene load_steps=4 format=2]

[ext_resource path="res://RootScenes/PlayerMUX.tscn" type="PackedScene" id=1]
[ext_resource path="res://Authentication/AuthenticationController.gd" type="Script" id=2]
[ext_resource path="res://Authentication/LoginSignupController.gd" type="Script" id=4]

[node name="Auth" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Authentication" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = -56.0
margin_right = 251.0
margin_bottom = 165.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="Authentication"]
margin_left = 10.0
margin_top = 15.0
margin_right = 310.0
margin_bottom = 30.0
text = "(version)
"

[node name="Login" type="Container" parent="Authentication"]
visible = false
margin_top = 17.0
margin_right = 502.0
margin_bottom = 250.0
script = ExtResource( 4 )
game_scene = ExtResource( 1 )

[node name="Email" type="LineEdit" parent="Authentication/Login"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 40.0
margin_right = -10.0
margin_bottom = 64.0
placeholder_text = "Email (required)"
caret_blink = true

[node name="Password" type="LineEdit" parent="Authentication/Login"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 75.0
margin_right = -10.0
margin_bottom = 99.0
secret = true
placeholder_text = "Password (required)"
caret_blink = true

[node name="LoginBtn" type="Button" parent="Authentication/Login"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -108.0
margin_right = 130.0
margin_bottom = -88.0
text = "Login"

[node name="SignupBtn" type="Button" parent="Authentication/Login"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -108.0
margin_right = -232.0
margin_bottom = -88.0
text = "Sign Up"

[node name="VersionIncorrect" type="WindowDialog" parent="Authentication/Login"]
margin_left = 145.0
margin_top = 105.0
margin_right = 345.0
margin_bottom = 106.0
window_title = "Get the latest version"

[node name="Signup" type="Container" parent="Authentication"]
margin_top = 17.0
margin_right = 502.0
margin_bottom = 260.0
script = ExtResource( 4 )
game_scene = ExtResource( 1 )

[node name="Email" type="LineEdit" parent="Authentication/Signup"]
visible = false
anchor_right = 1.0
margin_left = 10.0
margin_top = 40.0
margin_right = -10.0
margin_bottom = 64.0
placeholder_text = "Email (required)"
caret_blink = true

[node name="Username" type="LineEdit" parent="Authentication/Signup"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 75.0
margin_right = -10.0
margin_bottom = 94.0
placeholder_text = "Username (required)"
caret_blink = true

[node name="Password" type="LineEdit" parent="Authentication/Signup"]
visible = false
anchor_right = 1.0
margin_left = 10.0
margin_top = 110.0
margin_right = -10.0
margin_bottom = 124.0
secret = true
placeholder_text = "Password (required)"
caret_blink = true

[node name="SignupBtn" type="Button" parent="Authentication/Signup"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -80.0
margin_right = -372.0
margin_bottom = -68.0
text = "Login/Signup"

[node name="LoginBtn" type="Button" parent="Authentication/Signup"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -80.0
margin_right = -232.0
margin_bottom = -68.0
text = "Login"

[node name="VersionIncorrect" type="WindowDialog" parent="Authentication/Signup"]
margin_left = 145.0
margin_top = 105.0
margin_right = 345.0
margin_bottom = 106.0
window_title = "Get the latest version"

[connection signal="text_changed" from="Authentication/Login/Email" to="Authentication/Login" method="email_text_changed"]
[connection signal="text_changed" from="Authentication/Login/Password" to="Authentication/Login" method="password_text_changed"]
[connection signal="pressed" from="Authentication/Login/LoginBtn" to="Authentication/Login" method="login_button_pressed"]
[connection signal="pressed" from="Authentication/Login/SignupBtn" to="Authentication" method="show_signup"]
[connection signal="text_changed" from="Authentication/Signup/Email" to="Authentication/Signup" method="email_text_changed"]
[connection signal="text_changed" from="Authentication/Signup/Username" to="Authentication/Signup" method="username_text_changed"]
[connection signal="text_changed" from="Authentication/Signup/Password" to="Authentication/Signup" method="password_text_changed"]
[connection signal="pressed" from="Authentication/Signup/SignupBtn" to="Authentication/Signup" method="sign_up_button_pressed"]
[connection signal="pressed" from="Authentication/Signup/LoginBtn" to="Authentication" method="show_login"]
